--- a/ch02/Chapter2.ipynb
+++ b/ch02/Chapter2.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "name": "Chapter2.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -81,7 +80,7 @@
         "outputId": "8b2ba5c7-af86-4f0f-9b87-a617ad79846b"
       },
       "source": [
-        "!pip install optuna"
+        "!pip install optuna==2.9.0"
       ],
       "execution_count": null,
       "outputs": [
@@ -154,7 +153,7 @@
       },
       "source": [
         "from sklearn.linear_model import LogisticRegression\n",
-        "from sklearn.metrics import accuracy_score \n",
+        "from sklearn.metrics import accuracy_score\n",
         "from sklearn.model_selection import train_test_split\n",
         "import numpy as np\n",
         "import optuna\n",
@@ -242,7 +241,7 @@
       },
       "source": [
         "from sklearn.linear_model import LogisticRegression\n",
-        "from sklearn.metrics import accuracy_score \n",
+        "from sklearn.metrics import accuracy_score\n",
         "from sklearn.model_selection import train_test_split\n",
         "import numpy as np\n",
         "import optuna\n",
@@ -551,7 +550,7 @@
       },
       "source": [
         "from sklearn.tree import DecisionTreeClassifier\n",
-        "from sklearn.metrics import accuracy_score \n",
+        "from sklearn.metrics import accuracy_score\n",
         "import numpy as np\n",
         "import optuna\n",
         "from sklearn.model_selection import cross_validate\n",
@@ -2995,7 +2994,7 @@
         "id": "GcLqTwzJoyRz"
       },
       "source": [
-        "from sklearn.metrics import accuracy_score \n",
+        "from sklearn.metrics import accuracy_score\n",
         "from sklearn.model_selection import train_test_split\n",
         "import numpy as np\n",
         "import optuna\n",
